--- a/05_mvc_mvt_y_servicios_web.ipynb
+++ b/05_mvc_mvt_y_servicios_web.ipynb
@@ -11,11 +11,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## El patrón Modelo Vista Controlador (MVC).\n",
+    "# Introducción a *MVC*, *MVT* y servicios web. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## El patrón Modelo Vista Controlador (*MVC*).\n",
     "\n",
     "Este patrón de diseño de aplicaciones web consiste en separar los datos a los que accede una aplicación de las interfaces de dicha aplicación.\n",
     "\n",
-    "El patrón MCV se volvió muy popular en el desarrolo de aplicaciones web particularmente con su implementación por medio de [Ruby on Rails](https://rubyonrails.org/).\n",
+    "El patrón *MCV* se volvió muy popular en el desarrolo de aplicaciones web particularmente con su implementación por medio de [Ruby on Rails](https://rubyonrails.org/).\n",
     "\n",
     "![MVC](imagenes/MVC.gif)"
    ]
@@ -35,18 +42,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### *Controlador*.\n",
+    "### *Vista*.\n",
     "\n",
-    "Los controladores son gestores de eventos los cuales tienen la capacidad de cambiar el estado del modelo."
+    "La vista es el modo en el que el estado del modelo es presentado al usuario. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### *Vista*.\n",
+    "### *Controlador*.\n",
     "\n",
-    "La vista es el modo en el que el estado del modelo es presentado al usuario. "
+    "Los controladores son gestores de eventos los cuales tienen la capacidad de:\n",
+    "* Interactuar con el estado del modelo.\n",
+    "* Interactuar con lo que despliega  vista."
    ]
   },
   {
@@ -61,13 +70,13 @@
    "metadata": {},
    "source": [
     "En el caso de *Django*, se utiliza la arquitectura *MVT*, en la que:\n",
+    "* Las *Plantillas* (*Templates*), se encargan de presentar una interfaz al usuario por medio de un documento dinámico.\n",
     "* El *Modelo* está ligado a un *ORM*.\n",
-    "  * Cada modelo de *Django* es una subclase de la clase *django.db.models.Model*.\n",
+    "  * Cada modelo de *Django* es una subclase de la clase ```django.db.models.Model```.\n",
     "  * Un modelo está ligado generalmente a una tabla de una base de datos.\n",
     "  * Un registro de la tabla corresponde una instancia de un modelo.\n",
     "  * Los atributos de un objeto corresponden a un campo de un registro. \n",
-    "* Las *Vistas* hacen la vez del controlador y gestionan todas las reglas de negocio por medio de funciones.\n",
-    "* Las *Plantillas* (Templates), se encargan de presentar una interfaz al usuario."
+    "* Las *Vistas* hacen la vez del controlador y gestionan todas las reglas de negocio por medio de funciones."
    ]
   },
   {
@@ -76,7 +85,7 @@
    "source": [
     "## Aplicación web y servicios web.\n",
     "\n",
-    "### Aplicación web.\n",
+    "### Aplicación web (web app).\n",
     "\n",
     "Una aplicación web por lo general está enfocada a realizar transacciones que son accesibles a un usuario final y en las que la interfaz juega un papel predominate.\n",
     "\n",
@@ -95,7 +104,7 @@
     "\n",
     "### Interfaces de programación de aplicaciones (API).\n",
     "\n",
-    "Las API son un conjunto de endpoinst que exponendiversas funcionalidades de un servicio web, las cuales pueden ser utilizadas para el desarrollo de aplicaiones web."
+    "Las API son un conjunto de endpoints que exponen diversas funcionalidades de un servicio web, las cuales pueden ser utilizadas para el desarrollo de aplicaciones web."
    ]
   },
   {
