--- a/07_peticiones_y_respuestas.ipynb
+++ b/07_peticiones_y_respuestas.ipynb
@@ -11,25 +11,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**ADVERTENCIA:**  \n",
-    "\n",
-    "Para poder realizar exitosamente los ejercicios de esta notebook, es necesario haber seguido al pie de la letra y en orden sucesivo las instrucciones de todas las notebooks previas."
+    "# Peticiones y respuestas."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## El módulo *django.http*.\n",
+    "**ADVERTENCIA:**  \n",
     "\n",
-    "Este módulo contiene diversos recursos que permiten a *Django* desplegar servicios basa\n",
-    "ados en el protocolo HTTP.\n",
-    "\n",
-    "* Contiene varias clases que permiten definir y capturar como si fueran excepciones diversos estados de HTTP distintos a *200*.\n",
-    "* Contiene a la clase *django.http.HttpRequest*.\n",
-    "* Contiene a la clase *django.http.HttpResponse*.\n",
-    "\n",
-    "La referencia a estas clases puede ser consultada desde https://docs.djangoproject.com/en/2.1/ref/request-response/"
+    "Para poder realizar exitosamente los ejercicios de esta notebook, es necesario haber seguido al pie de la letra y en orden sucesivo las instrucciones de todas las notebooks previas."
    ]
   },
   {
@@ -40,9 +31,24 @@
     "\n",
     "Si un cliente cuenta con las credenciales y los permisos adecuados, éste puede iniciar una sesión con un servidor. \n",
     "\n",
-    "Una sesión consiste en intercambio de peticiones y respuestas entre un cliente y un servidor.\n",
+    "Una sesión consiste en intercambio de peticiones (equests) y respuestas (responses) entre un cliente y un servidor.\n",
     "\n",
-    "**Nota:** En capítulos posteriores se estudiarán temas relacionados a la creación de sesiones seguras y a la autenticación de usuarios."
+    "**Nota:** En capítulos subsecuentes se estudiarán temas relacionados a la creación de sesiones seguras y a la autenticación de usuarios."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## El módulo ```django.http```.\n",
+    "\n",
+    "Este módulo contiene diversos recursos que permiten a *Django* desplegar servicios basados en el protocolo *HTTP*.\n",
+    "\n",
+    "* Contiene varias clases que permiten definir y capturar como si fueran excepciones diversos estados de *HTTP* distintos a ```200```.\n",
+    "* Contiene a la clase ```django.http.HttpRequest```.\n",
+    "* Contiene a la clase ```django.http.HttpResponse```.\n",
+    "\n",
+    "La referencia a estas clases puede ser consultada desde https://docs.djangoproject.com/en/2.2/ref/request-response/"
    ]
   },
   {
@@ -51,7 +57,7 @@
    "source": [
     "## Los objetos *request*.\n",
     "\n",
-    "A los objetos instanciados de la clase *django.http.HttpRequest*, se les conoce como *request*. Utilizaremos este término para referirnos a dichos objetos.\n",
+    "A los objetos instanciados de la clase ```django.http.HttpRequest```, se les conoce como *request*. Utilizaremos este término para referirnos a dichos objetos.\n",
     "\n",
     "* El estado de estos objetos contiene información acerca de la petición formulada desde un cliente.\n",
     "* Además, estos objetos cuentan con métodos que nos permiten facilitar el manejo de las peticiones.\n",
@@ -64,38 +70,38 @@
    "source": [
     "### Atributos de los objetos *request*.\n",
     "\n",
-    "* *scheme*: el cual contiene una cadena de caracteres que describe el esquema de autenticación utilizado para la conexión conforme a la [RFC7617](https://tools.ietf.org/html/rfc7617). Generalmente es *'http'* o *'https'*. \n",
-    "* *body*: el cual contiene datos que han sido enviados dentro de la petición en formato binario, takes como imágenes, videos, etc.\n",
-    "* *encoding*: el cual contiene una cadena de caracteres con los datos de codificación de la petición.\n",
-    "* *path*: el cual contiene una cadena de caracteres de la ruta del recurso en el servidor sin incluir el esquema o el dominio.\n",
-    "* *path_info*: ofrece información de la ruta capaz de ser procesada por diversos servidores web.\n",
-    "* *method*: el cual contiene una cadena de caracteres que indica el método utilizado para enviar la petición.\n",
-    "* *content_type*: el contiene una cadena de caracteres la cual indica el tipo de contenido de la petición. Los tipos MIME que peuden ser enviados pueden ser consultados en https://developer.mozilla.org/es/docs/Web/HTTP/Basics_of_HTTP/MIME_types.\n",
-    "* *content_params*: contiene un diccionario con lo definición de tipo de contenido en formato *clave:valor*.\n",
-    "* *GET*: contiene un diccionario con los parámetros enviados mediante el método *GET*.\n",
-    "* *POST*: contiene un diccionario con los parámetros enviados mediante el método *POST*.\n",
-    "* *COOKIES*: contiene un diccionario con las cookies enviadas en la petición.\n",
-    "* *FILES*: contiene un diccionario con los datos de los archivos enviados en la petición.\n",
-    "* *META*: Contiene un diccionario con una seri de datos los cuales peuden ser consultados en https://docs.djangoproject.com/en/2.1/ref/request-response/#django.http.HttpRequest.META.\n",
+    "* ```scheme```: el cual contiene una cadena de caracteres que describe el esquema de autenticación utilizado para la conexión conforme a la [*RFC7617*](https://tools.ietf.org/html/rfc7617). Generalmente es ```'http'``` o ```'https'```. \n",
+    "* ```body```: el cual contiene datos que han sido enviados dentro de la petición en formato binario, como imágenes, videos, etc.\n",
+    "* ```encoding```: el cual contiene una cadena de caracteres con los datos de codificación de la petición.\n",
+    "* ```path```: el cual contiene una cadena de caracteres de la ruta del recurso en el servidor sin incluir el esquema o el dominio.\n",
+    "* ```path_info```: ofrece información de la ruta capaz de ser procesada por diversos servidores web.\n",
+    "* ```method```: el cual contiene una cadena de caracteres que indica el método utilizado para enviar la petición.\n",
+    "* ```content_type```: el contiene una cadena de caracteres la cual indica el tipo de contenido de la petición. Los tipos MIME que pueden ser enviados pueden ser consultados en https://developer.mozilla.org/es/docs/Web/HTTP/Basics_of_HTTP/MIME_types.\n",
+    "* ```resolver_match```: Contiene una cadena de caracteres con la *URL*.\n",
+    "* ```content_params```: contiene un diccionario con la definición de tipo de contenido en formato ```clave:valor```.\n",
+    "* ```COOKIES```: contiene un objeto ```dict``` con las cookies enviadas en la petición.\n",
+    "* ```FILES```: contiene un diccionario con los datos de los archivos enviados en la petición.\n",
+    "* ```META```: Contiene un objeto tipo ```dict``` con una serie de datos los cuales pueden ser consultados en https://docs.djangoproject.com/en/2.2/ref/request-response/#django.http.HttpRequest.META.\n",
+    "* ```GET```: contiene un objeto de clase ```django.http.QueryDict``` con los parámetros enviados mediante el método ```GET```.\n",
+    "* ```POST```: contiene un objeto de clase ```django.http.QueryDict``` con los parámetros enviados mediante el método ```POST```.\n",
     "\n",
-    "Los métodos y particularidades de la clase *django.http.HttpRequest* se estudiarán posteriormente."
+    "Los principales métodos y particularidades de la clase ```django.http.HttpRequest```, así como la clase ```django.http.QueryDict``` se estudiarán en capítulos subsecuentes."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## La clase *django.http.HttpResponse*.\n",
+    "## La clase ```django.http.HttpResponse```.\n",
     "\n",
-    "Existen diversos tipos de respuestas (responses) que *Django* puede enviar a un cliente. Sin embargo, casi todas estas respuestas son subclases de la clase *django.http.HttpResponse*.\n",
+    "Existen diversos tipos de respuestas (responses) que *Django* puede enviar a un cliente. Sin embargo, casi todos los objetos *response* son instancias de subclases de ```django.http.HttpResponse```.\n",
     "\n",
-    "Las funciones de vista deben de regresar objetos instanciados de dicha clase.\n",
+    "Las funciones de vista deben de regresar objetos instanciados de dichas clases.\n",
     "\n",
+    "La siguiente es la sintaxis para instanciar un objeto a partir de la clase  ```django.http.HttpResponse```:\n",
     "```\n",
     "django.http.HttpResponse(<contenido>)\n",
-    "```\n",
-    "\n",
-    "El contenido que regresa este objeto debe de ser conformado por la función de vista."
+    "```"
    ]
   },
   {
@@ -118,9 +124,9 @@
    "source": [
     "**Ejemplo:**\n",
     "\n",
-    "El archivo *tutorial/main/views.py*  contiene las funciones de vista:\n",
+    "El archivo *src/07/views.py*  contiene las funciones de vista:\n",
     "* *index()*,  la cual crea y regresa un objeto instanciado de *django.http.HttpResponse*.\n",
-    "* *calificaciones()* la cual regresa *None*."
+    "* *vista()* la cual regresa *None*."
    ]
   },
   {
@@ -129,26 +135,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%cat tutorial/main/views.py"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "El siguiente código modifica a la función *calificaciones()* para que regrese algún componente del objeto *request*, en este caso, el método usado por el cliente.\n",
-    "    \n",
-    "``` python\n",
-    "def calificaciones(request):\n",
-    "    return HttpResponse(request.method)\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "El archivo *src/07/views.py* contiene el código con la función *calificaciones()* modificada."
+    "%cat src/07/views.py"
    ]
   },
   {
@@ -170,7 +157,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "%cat tutorial/main/views.py"
@@ -206,7 +195,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "! ./manage.py runserver 0.0.0.0:5000"
@@ -216,7 +207,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Al acceder a [http://localhost:5000/main/calif](http://localhost:5000/main/calif) se mostrará el método usado por el cliente."
+    "* Al acceder a [http://localhost:5000/main/vista](http://localhost:5000/main/vista) se mostrará el método usado por el cliente.\n",
+    "* Al acceder a [http://localhost:5000/main/vista?nombre=jose](http://localhost:5000/main/vista?nombre=jose) se mostrará el método usado por el cliente."
    ]
   },
   {
@@ -253,7 +245,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
